# config

./: .gitignore  mise.toml  package.json  pnpm-lock.yaml  taplo.toml
.github/: renovate.json
.github/workflows/: lint-action.yaml  lint.yaml
python/: .gitignore  pyproject.toml
typescript/: .gitignore  eslint.config.js  tsconfig.app.json
